--- a/.env.sample
+++ b/.env.sample
@@ -4,15 +4,25 @@ HTTP_SERVER_URL=http://localhost:8000
 HOST=0.0.0.0
 PORT=8000
 NODE_RED_PORT=1800
-NODE_RED_ADMIN=/scene1/admin
-NODE_RED_API_ROOT=/scene1
-NODE_RED_USER_DIR=/home/ed/Aloes/virtual-object-flow/
+NODE_RED_ADMIN=/admin
+NODE_RED_API_ROOT=/
+NODE_RED_USER_DIR=/home/ed/node-red-device/
 NODE_RED_USERNAME=
-NODE_RED_PASSHASh=
+NODE_RED_PASSHASH=
 DOMAIN=localhost
+MQTT_BROKER_HOST=localhost
+MQTT_BROKER_PORT=1883
+DEVICE_DEVEUI=123456789AZ
+DEVICE_ID=
+DEVICE_APPKEY=
+DEVICE_TYPE=node
+DEVICE_NAME=audio-player
+DEVICE_IN_PREFIX=-in
+DEVICE_OUT_PREFIX=-out
+DEVICE_IN_TOPIC=123456789AZ-in/#
 SERVER_LOGGER_LEVEL=4
 FS_PATH=./storage
-GIT_REPO_SSH_URL=git@framagit.org:getlarge/node-red-bridge.git
+GIT_REPO_SSH_URL=git@framagit.org:getlarge/node-red-device.git
 VPS_DEV_HOST=
 VPS_DEV_USER=
 VPS_STAGE_HOST=
