use env variables to configure device

--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,15 @@
-APP_NAME=node-red-bridge
-NODE_NAME=node-red-bridge
+APP_NAME=node-red-device
+NODE_NAME=node-red-device
 HTTP_SERVER_URL=http://localhost:8000
 HOST=0.0.0.0
 PORT=8000
-NODE_RED_PORT=1800
+NODE_RED_PORT=1880
 NODE_RED_ADMIN=/admin
 NODE_RED_API_ROOT=/
 NODE_RED_USER_DIR=/home/ed/node-red-device/
 NODE_RED_USERNAME=
 NODE_RED_PASSHASH=
+NODE_RED_STORE_TYPE=
 DOMAIN=localhost
 MQTT_BROKER_HOST=localhost
 MQTT_BROKER_PORT=1883
