update node red server conf

--- a/.env.sample
+++ b/.env.sample
@@ -11,13 +11,15 @@ NODE_RED_USERNAME=
 NODE_RED_PASSHASH=
 NODE_RED_STORE_TYPE=
 DOMAIN=localhost
-MQTT_BROKER_HOST=localhost
-MQTT_BROKER_PORT=1883
+ALOES_BROKER_HOST=localhost
+ALOES_BROKER_PORT=1883
+ALOES_USER_EMAIL=
+ALOES_USER_PASSWORD=
 DEVICE_DEVEUI=123456789AZ
 DEVICE_ID=
 DEVICE_APPKEY=
 DEVICE_TYPE=node
-DEVICE_NAME=audio-player
+DEVICE_NAME=aloes-light-device
 DEVICE_IN_PREFIX=-in
 DEVICE_OUT_PREFIX=-out
 DEVICE_IN_TOPIC=123456789AZ-in/#
