add remote env config pattern

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,14 @@
-APP_NAME=node-red-device
-NODE_NAME=node-red-device
 HTTP_SERVER_URL=http://localhost:8000
 HOST=0.0.0.0
 PORT=8000
 NODE_RED_PORT=1880
-NODE_RED_ADMIN=/admin
+NODE_RED_ADMIN_ROOT=/admin
 NODE_RED_API_ROOT=/
 NODE_RED_USER_DIR=/home/ed/node-red-device/
-NODE_RED_USERNAME=
-NODE_RED_PASSHASH=
 NODE_RED_STORE_TYPE=
 DOMAIN=localhost
-ALOES_BROKER_HOST=localhost
-ALOES_BROKER_PORT=1883
+ALOES_MQTT_HOST=localhost
+ALOES_MQTT_PORT=1883
 ALOES_USER_EMAIL=
 ALOES_USER_PASSWORD=
 DEVICE_DEVEUI=123456789AZ
@@ -24,11 +20,4 @@ DEVICE_IN_PREFIX=-in
 DEVICE_OUT_PREFIX=-out
 DEVICE_IN_TOPIC=123456789AZ-in/#
 SERVER_LOGGER_LEVEL=4
-FS_PATH=./storage
 GIT_REPO_SSH_URL=git@framagit.org:getlarge/node-red-device.git
-VPS_DEV_HOST=
-VPS_DEV_USER=
-VPS_STAGE_HOST=
-VPS_STAGE_USER=
-VPS_PROD_HOST=
-VPS_PROD_USER=
