--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,19 @@
-HTTP_SERVER_URL=http://localhost:8000
-HOST=0.0.0.0
-PORT=8000
-NODE_RED_PORT=1880
+NODE_RED_URL=http://localhost:9000
+NODE_RED_HOST=0.0.0.0
+NODE_RED_PORT=8000
 NODE_RED_ADMIN_ROOT=/admin
 NODE_RED_API_ROOT=/
-NODE_RED_USER_DIR=/home/ed/node-red-device/
+NODE_RED_UI_PATH=ui
+NODE_RED_USER_DIR=./
+NODE_RED_CREDENTIAL_SECRET=
 NODE_RED_STORE_TYPE=
 DOMAIN=localhost
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
-ALOES_USER_EMAIL=
-ALOES_USER_PASSWORD=
+ALOES_USER_EMAIL=youremail
+ALOES_USER_PASSWORD=yourpass
 DEVICE_DEVEUI=123456789AZ
-DEVICE_ID=
+DEVICE_ID=zyxwvuts987654321
 DEVICE_APPKEY=
 DEVICE_TYPE=node
 DEVICE_NAME=aloes-light-device
