update launch pattern

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-NODE_RED_URL=http://localhost:9000
+NODE_RED_URL=http://localhost:8000
 NODE_RED_HOST=0.0.0.0
 NODE_RED_PORT=8000
 NODE_RED_ADMIN_ROOT=/admin
@@ -7,14 +7,13 @@ NODE_RED_UI_PATH=ui
 NODE_RED_USER_DIR=./
 NODE_RED_CREDENTIAL_SECRET=
 NODE_RED_STORE_TYPE=
-DOMAIN=localhost
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
 ALOES_USER_EMAIL=youremail
 ALOES_USER_PASSWORD=yourpass
 DEVICE_DEVEUI=123456789AZ
 DEVICE_ID=zyxwvuts987654321
-DEVICE_APPKEY=
+DEVICE_APPKEY=test
 DEVICE_TYPE=node
 DEVICE_NAME=aloes-light-device
 DEVICE_IN_PREFIX=-in
