update server commands, and deploy pattern

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ NODE_RED_API_ROOT=/
 NODE_RED_UI_PATH=ui
 NODE_RED_USER_DIR=./
 NODE_RED_CREDENTIAL_SECRET=
+NODE_RED_ADMIN_PASSHASH=
 NODE_RED_STORE_TYPE=
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
