--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-red": "^0.20.5",
     "node-red-admin": "^0.1.5",
     "node-red-dashboard": "^2.14.0",
-    "node-red-node-email": "~1.3.0"
+    "node-red-node-email": "~1.3.0",
+    "node-red-node-serialport": "^0.8.1"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
