update .env and settings files, redirect to httpNodeRoot

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ NODE_RED_URL=http://localhost:8000
 NODE_RED_HOST=0.0.0.0
 NODE_RED_PORT=8000
 NODE_RED_ADMIN_ROOT=/admin
-NODE_RED_API_ROOT=/
+NODE_RED_API_ROOT=/app
 NODE_RED_UI_PATH=ui
 NODE_RED_USER_DIR=./
 NODE_RED_USERNAME=
@@ -11,7 +11,7 @@ NODE_RED_USERPASS=
 NODE_RED_PASSHASH=
 NODE_RED_ADMIN_PASSHASH=
 NODE_RED_CREDENTIAL_SECRET=
-NODE_RED_SESSION_SECRET=
+NODE_RED_SESSION_SECRET=session_secret
 NODE_RED_STORE_TYPE=
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
@@ -25,5 +25,6 @@ DEVICE_NAME=aloes-light-device
 DEVICE_IN_PREFIX=-in
 DEVICE_OUT_PREFIX=-out
 DEVICE_IN_TOPIC=123456789AZ-in/#
+TUNNEL_URL=
 SERVER_LOGGER_LEVEL=4
 GIT_REPO_SSH_URL=git@framagit.org:getlarge/node-red-device.git
