--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npx eslint --ext js .",
     "start": "node node_modules/node-red/red.js -v -u .",
-    "start:dev": "cp deploy/.env_dev .env ; NODE_ENV=development node ./index.js",
+    "start:dev": "cp deploy/.env_development .env ; NODE_ENV=development node ./index.js",
     "start:local": "cp deploy/.env_local .env ; pm2 startOrRestart ecosystem.config.js --update-env"
   },
   "dependencies": {
