--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,8 @@ NODE_RED_ADMIN_PASSHASH=
 NODE_RED_CREDENTIAL_SECRET=
 NODE_RED_SESSION_SECRET=session_secret
 NODE_RED_STORE_TYPE=
+ALOES_HTTP_HOST=localhost
+ALOES_HTTP_PORT=8000
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
 ALOES_USER_EMAIL=youremail
