--- a/package.json
+++ b/package.json
@@ -4,29 +4,71 @@
   "description": "Node-RED device",
   "scripts": {
     "lint": "npx eslint --ext js .",
+    "build": "npx babel lib --out-dir dist --ignore './lib/uitemplates/*'",
     "start": "node node_modules/node-red/red.js -v -u .",
-    "start:dev": "cp deploy/.env_development .env ; NODE_ENV=development node ./index.js",
-    "start:local": "cp deploy/.env_local .env ; pm2 startOrRestart ecosystem.config.js --update-env"
+    "start:dev": "cp deploy/.env_development .env ; NODE_ENV=development node ./nodemon.js",
+    "start:local": "cp deploy/.env_local .env ; NODE_ENV=local node ./nodemon.js",
+    "deploy:local": "npm run build ; cp deploy/.env_local .env ; pm2 startOrRestart ecosystem.config.js --update-env"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-basic-auth": "^1.2.0",
     "express-session": "^1.16.1",
     "localtunnel": "^1.9.1",
+    "node-cleanup": "^2.1.2",
     "node-red": "^0.20.5",
     "node-red-admin": "^0.1.5",
     "node-red-dashboard": "^2.14.0",
-    "node-red-node-email": "~1.3.0",
-    "node-red-node-serialport": "^0.8.1"
+    "node-red-node-email": "~1.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.0.0",
+    "acorn": "^6.1.0",
+    "babel-eslint": "^8.2.6",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-prettier": "^2.6.2",
     "nodemon": "^1.18.8",
     "prettier": "1.16.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-syntax-import-meta",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-json-strings",
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      "@babel/plugin-proposal-function-sent",
+      "@babel/plugin-proposal-export-namespace-from",
+      "@babel/plugin-proposal-numeric-separator",
+      "@babel/plugin-proposal-throw-expressions",
+      "@babel/plugin-transform-runtime"
+    ]
   },
   "eslintConfig": {
     "root": true,
@@ -43,7 +85,8 @@
     ],
     "parserOptions": {
       "ecmaVersion": 2018,
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "sourceType": "module"
     },
     "rules": {
       "import/no-unresolved": "off",
@@ -61,6 +104,7 @@
     "/public/",
     ".config.json",
     "/lib/uitemplates/",
+    "/dist/",
     "/docs/",
     "/node_modules/"
   ],
