--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node-red": "^0.20.5",
     "node-red-admin": "^0.1.5",
     "node-red-dashboard": "^2.14.0",
-    "node-red-node-email": "~1.3.0"
+    "node-red-node-email": "^1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
