--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,7 @@ NODE_RED_USER_DIR=./
 NODE_RED_USERNAME=
 NODE_RED_USERPASS=
 NODE_RED_PASSHASH=
+NODE_RED_HTTP_AUTH=false
 NODE_RED_ADMIN_PASSHASH=
 NODE_RED_CREDENTIAL_SECRET=
 NODE_RED_SESSION_SECRET=session_secret
@@ -29,4 +30,4 @@ DEVICE_OUT_PREFIX=-out
 DEVICE_IN_TOPIC=123456789AZ-in/#
 TUNNEL_URL=
 SERVER_LOGGER_LEVEL=4
-GIT_REPO_SSH_URL=git@framagit.org:getlarge/node-red-device.git
+GIT_REPO_SSH_URL=git@framagit.org:aloes/node-red-device.git
