--- a/.env.sample
+++ b/.env.sample
@@ -16,8 +16,10 @@ NODE_RED_SESSION_SECRET=session_secret
 NODE_RED_STORE_TYPE=
 ALOES_HTTP_HOST=localhost
 ALOES_HTTP_PORT=8000
+ALOES_HTTP_SECURE=false
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
+ALOES_MQTT_SECURE=false
 ALOES_USER_EMAIL=youremail
 ALOES_USER_PASSWORD=yourpass
 DEVICE_DEVEUI=123456789AZ
