--- a/.env.sample
+++ b/.env.sample
@@ -17,6 +17,7 @@ NODE_RED_STORE_TYPE=
 ALOES_HTTP_HOST=localhost
 ALOES_HTTP_PORT=8000
 ALOES_HTTP_SECURE=false
+ALOES_HTTP_API_ROOT=/api
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
 ALOES_MQTT_SECURE=false
