adding new uitemplates, throw errors

--- a/.env.sample
+++ b/.env.sample
@@ -9,18 +9,18 @@ NODE_RED_USER_DIR=./
 NODE_RED_USERNAME=
 NODE_RED_USERPASS=
 NODE_RED_PASSHASH=
-NODE_RED_HTTP_AUTH=false
+NODE_RED_HTTP_AUTH=
 NODE_RED_ADMIN_PASSHASH=
 NODE_RED_CREDENTIAL_SECRET=
 NODE_RED_SESSION_SECRET=session_secret
-NODE_RED_STORE_TYPE=
+NODE_RED_STORE_TYPE=memoryOnly
 ALOES_HTTP_HOST=localhost
 ALOES_HTTP_PORT=8000
-ALOES_HTTP_SECURE=false
+ALOES_HTTP_SECURE=
 ALOES_HTTP_API_ROOT=/api
 ALOES_MQTT_HOST=localhost
 ALOES_MQTT_PORT=1883
-ALOES_MQTT_SECURE=false
+ALOES_MQTT_SECURE=
 ALOES_USER_EMAIL=youremail
 ALOES_USER_PASSWORD=yourpass
 DEVICE_DEVEUI=123456789AZ
