--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-device",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "Node-RED device",
   "scripts": {
     "lint": "npx eslint --ext js .",
@@ -8,6 +8,7 @@
     "start": "node node_modules/node-red/red.js -v -u .",
     "start:dev": "cp deploy/.env_development .env ; NODE_ENV=development node ./nodemon.js",
     "start:local": "cp deploy/.env_local .env ; NODE_ENV=local node ./nodemon.js",
+    "start:stage": "cp deploy/.env_staging .env ; NODE_ENV=local node ./nodemon.js",
     "deploy:local": "npm run build ; cp deploy/.env_local .env ; pm2 startOrRestart ecosystem.config.js --update-env",
     "deploy:stage": "npm run build ; cp deploy/.env_staging .env ; pm2 startOrRestart ecosystem.config.js --update-env"
   },
