adding new functions for node-red ; fix process exit

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "npx babel lib --out-dir dist --ignore './lib/uitemplates/*'",
     "start": "node node_modules/node-red/red.js -v -u .",
     "start:dev": "cp deploy/.env_development .env ; NODE_ENV=development node ./nodemon.js",
-    "start:local": "cp deploy/.env_local .env ; NODE_ENV=local node ./nodemon.js",
-    "start:stage": "cp deploy/.env_staging .env ; NODE_ENV=local node ./nodemon.js",
+    "start:local": "cp deploy/.env_local .env ; NODE_ENV=local node  --max-old-space-size=2048 --max-memory-restart=1024 ./nodemon.js",
+    "start:stage": "cp deploy/.env_staging .env ; NODE_ENV=local node  --max-old-space-size=2048 --max-memory-restart=1024 ./nodemon.js",
     "deploy:local": "npm run build ; cp deploy/.env_local .env ; pm2 startOrRestart ecosystem.config.js --update-env",
     "deploy:stage": "npm run build ; cp deploy/.env_staging .env ; pm2 startOrRestart ecosystem.config.js --update-env"
   },
