load external modules from environment variables ; update lint rules

--- a/.env.sample
+++ b/.env.sample
@@ -32,6 +32,7 @@ DEVICE_IN_PREFIX=-in
 DEVICE_OUT_PREFIX=-out
 DEVICE_IN_TOPIC=123456789AZ-in/#
 DEVICE_CLIENT_ID=
+EXTERNAL_MODULES=
 TUNNEL_URL=
 SERVER_LOGGER_LEVEL=4
 GIT_REPO_SSH_URL=git@framagit.org:aloes/node-red-device.git
